# MMA-Analytics-HUB

./: README.md  app.py
API/Analysis/: app.py
API/mma_analytics_hub/: .env  mma_analytics_hub.db  pyproject.toml
API/mma_analytics_hub/Analysis/: program.py
API/mma_analytics_hub/migrations/: env.py
API/mma_analytics_hub/migrations/versions/: 37b66c6467bd_create_first_table.py
API/mma_analytics_hub/src/mma_analytics_hub/: database.py  main.py  models.py  schemas.py  settings.py
API/mma_analytics_hub/src/mma_analytics_hub/Analysis/: analitic.ipynb  app.py  etl.py  program.py
API/mma_analytics_hub/src/mma_analytics_hub/Analysis/database/output/: fighters_data.csv
API/mma_analytics_hub/tests/: conftest.py  test_db.py  test_main.py
Analysis/: analitic.ipynb  analytics.ipynb  app.py  notebookJunto.txt  program.py
